--- a/home/hypr/waybar/style.css
+++ b/home/hypr/waybar/style.css
@@ -93,7 +93,7 @@ window#waybar.hidden {
   border-radius: 10px;
   font-size: 12px;
   transition: none;
-  color: #1a1826;
+  color: #e6e6e6;
   background: #2a3b4f;
 }
 
